[package]
name = "sdlc-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
once_cell = "1.19"